src/test/deca/syntax/valid/custom/option/asm.deca
class TestAsm {
    void methodAsm() asm("  WSTR \"toto\"");
}
{
    TestAsm test = new Car();
    test.methodAsm();
}