src/test/deca/syntax/invalid/custom/object/main.deca
{
    A  = new A ;
    a.setX;
    println("a.getX() = ", a.getX()) ;
}